basic arithmetic operations
>>> 9-8
1
>>> 4*6
24
>>> 8/2
4.0
>>> 8/3
2.6666666666666665
>>> 8//3
2
>>> 8+9-10
7
>>> 8+9-
  File "<stdin>", line 1
    8+9-
       ^
SyntaxError: invalid syntax
>>> 8+2*3
14
>>> (8+2)*3
30
>>> 2*2*2*2
16
>>> 2**4
16
>>> 2*2*2*2
16
>>> 2*2*2*2*2*2*2*2
256
>>> 2**8
256
>>> 10/3
3.3333333333333335
>>> 10//3
3
>>> 10%3
1
>>> 11%3
2
>>> suresh
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'suresh' is not defined
>>> 'suresh'
'suresh'
>>> "suresh"
'suresh'
>>> "'suresh'"
"'suresh'"
>>> "975274025"
'975274025'
>>> "'975274025'"
"'975274025'"
>>> print('hello suresh')
hello suresh
>>> print("who are you")
who are you
>>> print("who's this")
who's this
>>> print('who's this')
  File "<stdin>", line 1
    print('who's this')
               ^
SyntaxError: invalid syntax
>>> print('who\'s this')
who's this
>>> print('this is 'laptop'')
  File "<stdin>", line 1
    print('this is 'laptop'')
                         ^
SyntaxError: invalid syntax
>>> print('this is "laptop"')
this is "laptop"
>>> print('suresh's "laptop"')
  File "<stdin>", line 1
    print('suresh's "laptop"')
                  ^
SyntaxError: invalid syntax
>>> print('suresh\'s "laptop"')
suresh's "laptop"
>>> 'suresh'
'suresh'
>>> 'suresh'+'suresh'
'sureshsuresh'
>>> 'suresh'+'suresh'+'suresh'+'suresh'
'sureshsureshsureshsuresh'
>>> 4*'suresh'
'sureshsureshsureshsuresh'
>>> print('c:/docs/suresh')
c:/docs/suresh
>>> print('c:/docs/naresh')
c:/docs/naresh
>>> print('c:\docs\suresh')
c:\docs\suresh
>>> print('c:\docs\naresh')
c:\docs
aresh
>>> print(r'c:\docs\naresh')
c:\docs\naresh
